# nlp-26

./: .gitignore
s1/: pyproject.toml  session_1_exercises.ipynb
s2/: pyproject.toml  scrapingUN_Resolutions_v2026.ipynb
s3/: pyproject.toml  read_spain_AP_all_files_forstudents.ipynb  session3_preparation.ipynb  session_3_slides_example (1).ipynb
s4/: pyproject.toml  session4_countvectorizer_WEF_project.ipynb  session4_vectormath.ipynb
s5/: pyproject.toml  session5_EPUintro.ipynb  session5_similarity.ipynb
ta2/: booking_scraping_ta_session_p1.ipynb  booking_scraping_ta_session_p2.ipynb  pyproject.toml
ta3/: 03_solution.ipynb  booking_did_stata_prep_updated.ipynb
