[project]
name = "text-mining-dsdm"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
  "pandas>=2.2",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "scikit-learn>=1.4",
  "nltk>=3.9",
  "textblob>=0.18",
  "requests>=2.32",
  "beautifulsoup4>=4.12"
]
