[project]
name = "text-mining-dsdm"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
  "pip>=24.0",
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
  "pandas>=2.2",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "scikit-learn>=1.4",
  "nltk>=3.9",
  "textblob>=0.18",
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "striprtf>=0.0.26",
  "statsmodels>=0.14",
  "scipy>=1.10",
  "pyreadstat>=1.2.0",
  "nltk>=3.8.1",
  "spacy>=3.7.0",
  "scikit-learn>=1.4"
]
