[project]
name = "booking-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.26.4,<2.0.0",
    "pyarrow>=21.0.0,<22.0.0",
    "requests>=2.31,<3",
    "selenium>=4.39.0",
    "webdriver-manager>=4.0.2",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
]

# Development dependencies
[dependency-groups]
dev = [
    "ipykernel"
]
